--- a/_includes/head.pug
+++ b/_includes/head.pug
@@ -1,7 +1,7 @@
 head
-    title Letterform Design
+    title Display Type Design
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Eczar:400,500")
+    link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700")
     link(rel="stylesheet", href="{{ site.baseurl }}/assets/css/orange-mountain.css")
     link(rel="stylesheet", href="{{ site.baseurl }}/assets/css/extra.css")
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js")
