--- a/_includes/header.pug
+++ b/_includes/header.pug
@@ -1,7 +1,7 @@
 header.header
   .wrap
     a.header__title.cc-active.active-link(href='{{ site.baseurl }}/')
-      | Letterform Design
+      | Display Type Design
     .menu
       .menu__toggle.js-menu-toggle
         .menu__toggle__icon
@@ -15,16 +15,10 @@ header.header
             a.menu__list__item__link(href='{{ site.baseurl }}/') Gallery
             | {% endif %}
           li.menu__list__item
-            | {% if page.name == 'lettering.md' %}
-            a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/lettering') #Lettering
+            | {% if page.name == 'summer_2020.md' %}
+            a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }} /summer_2020') Summer 2020
             | {% else %}
-            a.menu__list__item__link.class-link(href='{{ site.baseurl }}/lettering') #Lettering
-            | {% endif %}
-          li.menu__list__item
-            | {% if page.name == 'type-design.md' %}
-            a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/type-design') #TypeDesign
-            | {% else %}
-            a.menu__list__item__link.class-link(href='{{ site.baseurl }}/type-design') #TypeDesign
+            a.menu__list__item__link.class-link(href='{{ site.baseurl }} /summer_2020') Summer 2020
             | {% endif %}
           li.menu__list__item
             | {% if page.name == 'about.md' %}
