Update header with compact design

--- a/_layouts/default.pug
+++ b/_layouts/default.pug
@@ -1,8 +1,8 @@
 doctype
 html
-    | {% include head %}
+    | {% include head.html %}
     body.ajax-loading
-      | {% include header %}
+      | {% include header.html %}
       .page
         .page__content
           section.intro
