--- a/_includes/header.pug
+++ b/_includes/header.pug
@@ -14,30 +14,49 @@ header.header
             | {% else %}
             a.menu__list__item__link(href='{{ site.baseurl }}/') Gallery
             | {% endif %}
-          li.menu__list__item
+          li.menu__list__item 
             | {% if page.name == 'summer_2021.md' %}
             a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/summer_2021') Summer 2021
             | {% else %}
             a.menu__list__item__link.class-link(href='{{ site.baseurl }}/summer_2021') Summer 2021
             | {% endif %}
-          li.menu__list__item
-            | {% if page.name == 'spring_2021.md' %}
-            a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/spring_2021') Spring 2021
+          li.menu__list__item.dropdown
+            //- | {% if page.name == 'summer_2021.md' %}
+            //- .menu__list__item__link.cc-active.active-link Past Showcases - Summer 2021
+            | {% if page.name == 'spring_2021.md' %} 
+            .menu__list__item__link.cc-active.active-link Past Showcases - Spring 2021
+            | {% elsif page.name == 'fall_2020.md' %} 
+            .menu__list__item__link.cc-active.active-link Past Showcases - Fall 2020
+            | {% elsif page.name == 'summer_2020.md' %} 
+            .menu__list__item__link.cc-active.active-link Past Showcases - Summer 2020
             | {% else %}
-            a.menu__list__item__link.class-link(href='{{ site.baseurl }}/spring_2021') Spring 2021
-            | {% endif %}  
-          li.menu__list__item
-            | {% if page.name == 'fall_2020.md' %}
-            a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/fall_2020') Fall 2020
-            | {% else %}
-            a.menu__list__item__link.class-link(href='{{ site.baseurl }}/fall_2020') Fall 2020
+            .menu__list__item__link.no-hover Past Showcases
             | {% endif %}
-          li.menu__list__item
-            | {% if page.name == 'summer_2020.md' %}
-            a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/summer_2020') Summer 2020
-            | {% else %}
-            a.menu__list__item__link.class-link(href='{{ site.baseurl }} /summer_2020') Summer 2020
-            | {% endif %}
+            ul.dropdown-content
+              //- li.menu__list__item
+              //-   | {% if page.name == 'summer_2021.md' %}
+              //-   a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/summer_2021') Summer 2021
+              //-   | {% else %}
+              //-   a.menu__list__item__link.class-link(href='{{ site.baseurl }}/summer_2021') Summer 2021
+              //-   | {% endif %}
+              li.menu__list__item
+                | {% if page.name == 'spring_2021.md' %}
+                a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/spring_2021') Spring 2021
+                | {% else %}
+                a.menu__list__item__link.class-link(href='{{ site.baseurl }}/spring_2021') Spring 2021
+                | {% endif %}  
+              li.menu__list__item
+                | {% if page.name == 'fall_2020.md' %}
+                a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/fall_2020') Fall 2020
+                | {% else %}
+                a.menu__list__item__link.class-link(href='{{ site.baseurl }}/fall_2020') Fall 2020
+                | {% endif %}
+              li.menu__list__item
+                | {% if page.name == 'summer_2020.md' %}
+                a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/summer_2020') Summer 2020
+                | {% else %}
+                a.menu__list__item__link.class-link(href='{{ site.baseurl }} /summer_2020') Summer 2020
+                | {% endif %}
           li.menu__list__item
             | {% if page.name == 'about.md' %}
             a.menu__list__item__link.cc-active.active-link(href='{{ site.baseurl }}/about') About
