--- a/_layouts/projects.pug
+++ b/_layouts/projects.pug
@@ -1,8 +1,8 @@
 doctype
 html
-    | {% include head %}
+    | {% include head.html %}
     body.ajax-loading
-      | {% include header %}
+      | {% include header.html %}
       .page
         .page__content
           | {% if page.class %}
@@ -11,4 +11,4 @@ html
           | {% assign projects = site.projects %}
           | {% endif %}
 
-          | {% include project_grid %}
+          | {% include project_grid.html %}
