--- a/assets/css/orange-mountain.css
+++ b/assets/css/orange-mountain.css
@@ -1214,7 +1214,7 @@ section {
  color:#fff;
  padding:10px 0
 }
-.menu__list__item__link:hover {
+.menu__list__item__link:not(.no-hover):hover {
  color:#ffe100
 }
 @media only screen and (min-width:768px) {
@@ -1223,7 +1223,7 @@ section {
   font-size:18px;
   color:#ffffff
  }
- .menu__list__item__link:hover {
+ .menu__list__item__link:not(.no-hover):hover {
   color:#ffe100
  }
 }
